--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,4 +1,3 @@
 spring.application.name=transportation_equipment
-spring.data.mongodb.uri=mongodb+srv://<username>:<pwd>@<cluster>.mongodb.net/mygrocerylist
-spring.data.mongodb.database=mygrocerylist
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.mongodb.uri=mongodb+srv://<username>:<pwd>@<cluster>.mongodb.net/transportation_equipment
+spring.data.mongodb.database=transportation_equipment
